# pykitinfo

./: CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  pylintrc  pypi.md  pyproject.toml  requirements.txt  setup.py
doc/source/: conf.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pykitinfo.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  pykitinfo.rst.txt
pykitinfo/: __init__.py  detect_edbg_tools.py  detect_legacy_pickit3_tools.py  detect_mcp2221a_tools.py  detect_microchip_tools.py  gen4_detect.py  gen4_tools.py  genx.py  logging.yaml  pykitinfo.py  pykitinfo_cli.py  tools.py  version.py  winkernel32.py  winsetupapi.py  winusb.py
pykitinfo/tests/: test_nothing.py  test_winusb.py
